# MyMonsterWar

./: .clang-tidy  CMakeLists.txt  Dependencies.cmake  ProjectOptions.cmake  README.md  vcpkg.json
.github/: constants.env
.github/workflows/: auto-clang-format.yml  ci.yml  codeql-analysis.yml  wasm.yml
assets/: config.json
assets/data/: resource_mapping.json
assets/maps/: level1.tmj
assets/maps/tileset/: buildings.tsj
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Emscripten.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  Tests.cmake  VCEnvironment.cmake
configured_files/: config.hpp.in
fuzz_test/: CMakeLists.txt
include/MyMonsterWar/: sample_library.hpp
src/: CMakeLists.txt  main.cpp
src/engine/audio/: audio_player.cpp  audio_player.h
src/engine/component/: animation_component.cpp  animation_component.h  audio_component.cpp  audio_component.h  component_base.h  health_component.cpp  health_component.h  name_component.h  parallax_component.cpp  parallax_component.h  render_component.h  sprite_component.cpp  sprite_component.h  tilelayer_component.cpp  tilelayer_component.h  transform_component.cpp  transform_component.h  velocity_component.h
src/engine/core/: configurator.cpp  configurator.h  context.cpp  context.h  frame_time_controller.cpp  frame_time_controller.h  game_app.cpp  game_app.h  game_state.cpp  game_state.h
src/engine/input/: input_manager.cpp  input_manager.h
src/engine/loader/: basic_entity_builder.cpp  basic_entity_builder.h  level_loader.cpp  level_loader.h
src/engine/object/: game_object.cpp  game_object.h
src/engine/render/: animation.cpp  animation.h  camera.cpp  camera.h  image.h  renderer.cpp  renderer.h  sprite.h  text_renderer.cpp  text_renderer.h
src/engine/resource/: audio_manager.cpp  audio_manager.h  font_manager.cpp  font_manager.h  resource_manager.cpp  resource_manager.h  texture_manager.cpp  texture_manager.h
src/engine/scene/: level_loader.cpp  level_loader.h  scene_base.cpp  scene_base.h  scene_manager.cpp  scene_manager.h
src/engine/system/: animation_system.cpp  animation_system.h  fwd.h  movement_system.cpp  movement_system.h  render_system.cpp  render_system.h  y_sort_system.cpp  y_sort_system.h
src/engine/ui/: ui_button.cpp  ui_button.h  ui_element_base.cpp  ui_element_base.h  ui_image.cpp  ui_image.h  ui_interactive_element_base.cpp  ui_interactive_element_base.h  ui_label.cpp  ui_label.h  ui_manager.cpp  ui_manager.h  ui_panel.cpp  ui_panel.h
src/engine/ui/state/: ui_hover_state.cpp  ui_hover_state.h  ui_normal_state.cpp  ui_normal_state.h  ui_pressed_state.cpp  ui_pressed_state.h  ui_state_base.h
src/engine/utils/: alignment.h  events.h  math.h  string_view_hash.h
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/game/component/: enemy_component.h
src/game/data/: path_node.h
src/game/defs/: events.h  tags.h
src/game/loader/: entity_builder_mw.cpp  entity_builder_mw.h
src/game/scene/: game_scene.cpp  game_scene.h
src/game/system/: follow_path_system.cpp  follow_path_system.h  fwd.h  remove_dead_system.cpp  remove_dead_system.h
src/sample_library/: CMakeLists.txt  sample_library.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp
test/cmake/: test_sanitizers_apple_excludes_leak.cmake  test_sanitizers_non_apple_includes_leak.cmake
